--- a/views/form.ejs
+++ b/views/form.ejs
@@ -8,4 +8,8 @@
      enter name:<input type ="submit"  />
         </form>
 <%= msg %>
+<br />
+already have account.then: <form action="/preacc" method="post">
+<input type="submit" login />
+</form>
 
