--- a/views/form.ejs
+++ b/views/form.ejs
@@ -5,11 +5,11 @@
      enter phone:<input type ="text" name= "phone" id="phone" />
      enter maild:<input type ="text" name= "emailid" id="emailid" />
      enter passeword:<input type ="password" name= "password" id="password" />
-     enter name:<input type ="submit"  />
+     enter name:<input type ="SignUp"  />
         </form>
 <%= msg %>
 <br />
 already have account.then: <form action="/preacc" method="post">
-<input type="submit" login />
+<input type="submit" value="login"/>
 </form>
 
