--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,4 @@
+<!-----
 <script>
 function loadDoc() {
   var xhttp = new XMLHttpRequest();
@@ -18,3 +19,66 @@ function loadDoc() {
         </form>
 <script> alert("registered successfully") </script>
 <button onclick = "loadDoc()">clickhere</button>
+
+
+
+---->
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+#a{display: flex;justify-content: center;align-items: center;}
+#b{display: flex;justify-content: center;align-items: center;}
+input{display: block; margin:10px; width:17em;height:2.5em;border-color: transparent    ;border:"1px  solid white";background-color: transparent;color:white;border-bottom:white 1px ;}
+#main{position: absolute;left:50%;top:50%;transform:translate(-50%, -50%); }
+#main{border-width:1px;}
+button{ color:white;background-color: black; border-radius: 15px;padding: 10px;margin:10px;width:7.5em;}
+button:hover{ color:black;background-color: white; border-radius: 15px;padding: 10px;margin:10px;width:7.5em;}
+body{background-image: url('https://www.vinsguru.com/wp-content/uploads/2019/08/vins-aws-ecr.gif');background-repeat: no-repeat; background-attachment: fixed;background-position: center;background-size:cover;}
+div[id="main"]{border-width: 10px;background-color:black;padding:50px 20px;border-radius:25px;}
+input[type="submit"]{ color:white;background-color: black; border-radius: 15px;padding: 10px; padding-bottom: 10px;margin:10px;width:7.5em;border-bottom-color:transparent;}
+input[type="submit"]:hover{ color:black;background-color: white; border-radius: 15px;padding: 10px;margin:10px;width:7.5em;}
+
+</style>
+</head>
+<body>
+<script>
+function loadDoc() {
+  var xhttp = new XMLHttpRequest();
+  xhttp.onreadystatechange = function() {
+    if (this.readyState == 4 ) {
+     document.getElementById("homediv").innerHTML = this.responseText;
+    }
+  };
+  xhttp.open("GET", "http://<%= msg %>:2346/cntimage", true);
+  xhttp.send();
+}
+</script>
+
+<div id="main">
+<div id="a">
+<form action="/login" method= "post" id= "homediv">
+     <label></label><input type ="email" name= "lemail" id="lemail"  placeholder="email" />
+     <label></label><input type ="password" name= "lpassword" id="lpassword"  placeholder="enter password" />
+     <input type ="submit"   value="login" />
+</form>
+</div>
+<div id="b">
+<script> alert("registered successfully") </script>
+<!-- <button onclick = "loadDoc()">login</button> --> 
+<div style="text-align: center ;padding: -4px;color: white ;">don't have account:</div>
+<form action="/home">
+    <input type="submit" value="register">
+</form>
+</div>
+</div>
+</body>
+</html>
