--- a/views/form.ejs
+++ b/views/form.ejs
@@ -5,7 +5,7 @@
      enter phone:<input type ="text" name= "phone" id="phone" />
      enter maild:<input type ="text" name= "emailid" id="emailid" />
      enter passeword:<input type ="password" name= "password" id="password" />
-     enter name:<input type ="SignUp"  />
+    			<input type ="submit" value="SignUp"  />
         </form>
 <%= msg %>
 <br />
