--- a/views/login.ejs
+++ b/views/login.ejs
@@ -73,7 +73,7 @@ function loadDoc() {
 </form>
 </div>
 <div id="b">
-<script> alert("registered successfully") </script>
+<script> alert(" you must be register successfully ") </script>
 <!-- <button onclick = "loadDoc()">login</button> --> 
 <div style="text-align: center ;padding: -4px;color: white ;"><h4 style="opacity:60%">don't have account:</h4></div>
 <form action="/home">
