deleted:    .docker.ejs.swp 	modified:   docker.ejs

--- a/views/docker.ejs
+++ b/views/docker.ejs
@@ -255,7 +255,7 @@ amount of memory: <input type="number" name="memory" id="memory" placeholder="Ex
     
   </div>
 
-
+<div> <this is another file div > </div>
     
     <!--<div id="hosturl" name="hosturl">hosting div</div>-->
 </body>
